cmake_minimum_required(VERSION 2.8.3)
project(groundcontrol_gui)

find_package(catkin REQUIRED)

## DEPENDS: system dependencies of this project that dependent projects also need
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES x80sv_simulation
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)

